Try fix for css being overriden on firefox Edge

--- a/editor/css/index.css
+++ b/editor/css/index.css
@@ -24,9 +24,10 @@ body {
 #editor_content {
     background-color: #ddffff;
 }
+.blocklyText[style],
 .blocklyText,
 .blocklySvg text { /* for older version */
-  fill:black;
+  fill:black !important;
 }
 .blocklyTreeIcon {
   visibility : hidden;
